--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -10,7 +10,7 @@
   </configSections>
 	<!-- DB 연결 config-->
 	<connectionStrings>
-		<add name="EFDbContext" connectionString="Data Source=DESKTOP-P7A5DPI\SQLEXPRESS;Initial Catalog=SportsStore;User ID=sa;Password=db7235103" providerName="System.Data.SqlClient"/>
+		<add name="EFDbContext" connectionString="Data Source=DESKTOP-P7A5DPI\SQLEXPRESS;Initial Catalog=SportsStore;User ID=sa;Password=db7235103" providerName="System.Data.SqlClient" />
 		
 	</connectionStrings>
   <appSettings>
@@ -25,6 +25,13 @@
 	<globalization culture="en-GB" uiCulture="en-GB"/>
 	!-->
     <httpRuntime targetFramework="4.7.2" />
+	  <!-- 폼에 들어갈 때 로그인을 해야하며 , 인증 유지시간은 2880분 = 48시간이다.-->
+	  <authonrication mode="Forms">
+		  <forms loginUrl="~/Account/Login" timeout="2880"></forms>
+		  <credencials passwordFormat="Clear">
+			  <user name="admin" password="secret" />
+		  </credencials>
+	  </authonrication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
