--- a/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -101,6 +101,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
+    <Compile Include="CartTest.cs" />
+    <Compile Include="AdminTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
